--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+
+git rm -r --cached Library/
+git commit -m "Ignore Unity Library files"
+
+
+
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
